<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dream Buckets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_about">About</string>
    <string name="name">Name</string>
    <string name="create_bucket">Create Bucket</string>
    <string name="yourThoughts">Your thoughts</string>
    <string name="nameHintCateg">What\'s your bucket name?</string>
    <string name="thoughtsHintCateg">Write your thoughts</string>
    <string name="category">Category</string>
    <string name="category_travel">Travel</string>
    <string name="category_life">Life</string>
    <string name="category_love">Love</string>
    <string name="category_food">Food</string>
    <string name="category_work">Work</string>
    <string name="category_passion">Passion</string>
    <string name="target_date">Target Date</string>
    <string name="fixedDate_hint">Tap here to select the date</string>
    <string name="create_bucket_button">CREATE BUCKET</string>
    <string name="AlertDialogTitle">Are you Sure?</string>
    <string name="AlertDialogMessage">Do you want to delete your dream?</string>
    <string name="about_developed">Developed by</string>
    <string name="about_developer_name">Harish. V</string>
    <string name="about_designation">Android Developer</string>

    <string name="about_desc">A developer who likes to think, learn and create.</string>
    <string name="about_follow">Connect with me</string>

    <string name="about_dev">Developed by\n<b><u>Harish. V</u></b>\n</string>
    <string name="about_group"><b>Follow me on</b></string>
    <string name="add_activity_title">Create Bucket</string>
    <string name="dream_level">Dream level</string>
</resources>
